<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_accent"
    tools:context=".AnalyticsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_analytics"
        android:textColor="@color/light_accent"
        android:textStyle="bold"
        android:textSize="50dp"
        android:layout_marginTop="64dp"
        android:paddingLeft="28dp"
        android:fontFamily="@font/bold"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/rounded_corners_3"
        android:layout_marginTop="140dp"
        />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rounded_corners_4"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="211dp"
        />

    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="Your Average Mood"
        android:textColor="@color/light_accent"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="547dp"
        android:layout_marginLeft="235dp"
        android:fontFamily="@font/bold"
        />

    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/avg_mood"
        android:gravity="center"
        android:textColor="@color/light_accent"
        android:id="@+id/avg_mood"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="235dp"
        android:fontFamily="@font/black_outline"
        />

    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:id="@+id/avg_mood_feedback"
        android:text="@string/mood_react"
        android:textColor="@color/light_accent"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textAlignment="center"
        android:layout_marginTop="665dp"
        android:layout_marginLeft="235dp"
        android:fontFamily="@font/normal"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rounded_corners_4"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_header"
        android:textColor="@color/light_accent"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="547dp"
        android:layout_marginLeft="55dp"
        android:fontFamily="@font/bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Happiness Points"
        android:textColor="@color/light_accent"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginTop="665dp"
        android:layout_marginLeft="45dp"
        android:fontFamily="@font/bold"
        />

    <Button
        android:id="@+id/happy_points"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:text="@string/score"
        android:gravity="center"
        android:textColor="@color/light_accent"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:textSize="80dp"
        android:padding="29dp"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/bold"
        />

</FrameLayout>