<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_accent"
    tools:context=".HomeFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Greetings,"
        android:textColor="@color/light_accent"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/username"
        android:textColor="@color/light_accent"
        android:textStyle="bold"
        android:textSize="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="28dp"
        android:fontFamily="@font/bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quote_header"
        android:textColor="@color/light_accent"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="146dp"
        android:fontFamily="@font/bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="@string/quote"
        android:textColor="@color/light_accent"
        android:textSize="22dp"
        android:padding="14dp"
        android:fontFamily="@font/italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_header"
        android:textColor="@color/light_accent"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="293dp"
        android:fontFamily="@font/bold"
        />

    <ImageView
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:src="@drawable/rounded_corners_2"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="223dp"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/spotify_logo"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="349dp"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_title"
        android:textColor="@color/dark_accent"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginLeft="242dp"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/bold"
        />

    <ImageButton
        android:id="@+id/spotify_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="83dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/text_app"
        android:padding="23px"
        android:src="@drawable/ic_play_arrow" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="341dp"
            android:paddingHorizontal="14dp"
            android:src="@drawable/rounded_corners_2" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analytic_question"
        android:textColor="@color/dark_accent"
        android:textStyle="bold"
        android:textSize="22dp"
        android:paddingLeft="30dp"
        android:layout_marginTop="355dp"
        android:fontFamily="@font/bold"
        />

        <Button
            android:id="@+id/neu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="410dp"
            android:textSize="11dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/rounded_button_3"
            android:fontFamily="@font/normal"
            android:text="neutral"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/neg"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="410dp"
            android:textSize="11dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/rounded_button_2"
            android:fontFamily="@font/normal"
            android:text="Sad"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/ext_pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="310dp"
            android:layout_marginTop="410dp"
            android:textSize="11dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/rounded_button_5"
            android:fontFamily="@font/normal"
            android:text="Euphoric"
            android:textColor="@color/dark_accent" />

        <Button
            android:id="@+id/ext_neg"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="410dp"
            android:layout_marginRight="14dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/rounded_button_1"
            android:fontFamily="@font/normal"
            android:text="Distressed"
            android:textColor="@color/black"
            android:textSize="11dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="410dp"
            android:textSize="11dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/rounded_button_4"
            android:fontFamily="@font/normal"
            android:text="Happy"
            android:textColor="@color/black" />

        <ImageButton
            android:layout_width="match_parent"
            android:id="@+id/today_analytics"
            android:layout_height="200dp"
            android:layout_marginTop="500dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="204dp"
            android:paddingLeft="14dp"
            android:src="@drawable/rounded_corners_2"
            android:background="@android:color/transparent"
            />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="500dp"
            android:layout_marginLeft="214dp"
            android:paddingRight="14dp"
            android:src="@drawable/rounded_corners_2"
            android:background="@android:color/transparent"
            />


        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Check Today's Analytics."
            android:textColor="@color/dark_accent"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="520dp"
            android:fontFamily="@font/black"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="More Quotes."
            android:textColor="@color/dark_accent"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginLeft="225dp"
            android:layout_marginTop="520dp"
            android:fontFamily="@font/black"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Generate A Random Quote."
            android:textColor="@color/dark_accent"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginLeft="225dp"
            android:layout_marginTop="605dp"
            android:fontFamily="@font/light"
            />

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:padding="4dp"
            android:src="@drawable/ic_arrow"
            android:layout_marginTop="655dp"
            android:layout_marginLeft="93dp"
            />

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:padding="4dp"
            android:src="@drawable/ic_arrow"
            android:layout_marginTop="655dp"
            android:layout_marginLeft="290dp"
            />


    </FrameLayout>
</ScrollView>